add google meta info

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,9 @@
       name="built with React, Express/Node, MongoDB, Tailwind CSS"
       content="Teagan M"
     />
+    <meta
+    name="description"
+    content="Personalized animal caretaking and sitting, servicing the Corvallis, Philomath, and Albany OR area."
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/tgwalk_black.svg" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
